# veeam_entry_task

./: README.md  pyproject.toml
veeam_entry_task/: logic_for_synch.py
