[tool.poetry]
name = "veeam-entry-task"
version = "0.1.0"
description = ""
authors = ["martinadivinova <martina.cerna01@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
